--- a/package.json
+++ b/package.json
@@ -5,21 +5,28 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "dotenv": "^10.0.0",
     "gatsby": "^3.4.1",
     "gatsby-plugin-gatsby-cloud": "^2.4.1",
+    "gatsby-plugin-graphql-codegen": "^2.7.1",
     "gatsby-plugin-image": "^1.4.0",
     "gatsby-plugin-manifest": "^3.4.0",
     "gatsby-plugin-offline": "^4.4.0",
     "gatsby-plugin-react-helmet": "^4.4.0",
     "gatsby-plugin-sharp": "^3.4.1",
+    "gatsby-source-contentful": "^5.6.0",
     "gatsby-source-filesystem": "^3.4.0",
+    "gatsby-transformer-remark": "^4.3.0",
     "gatsby-transformer-sharp": "^3.4.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "ts-node": "^10.0.0",
+    "typescript": "^4.3.2"
   },
   "devDependencies": {
+    "@types/react-helmet": "^6.1.1",
     "prettier": "2.2.1"
   },
   "keywords": [
@@ -27,8 +34,8 @@
   ],
   "license": "0BSD",
   "scripts": {
+    "dev": "gatsby develop",
     "build": "gatsby build",
-    "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
