--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dotenv": "^10.0.0",
     "gatsby": "^3.4.1",
     "gatsby-plugin-gatsby-cloud": "^2.4.1",
+    "gatsby-plugin-google-analytics": "^3.7.1",
     "gatsby-plugin-graphql-codegen": "^2.7.1",
     "gatsby-plugin-image": "^1.7.1",
     "gatsby-plugin-manifest": "^3.4.0",
@@ -18,6 +19,7 @@
     "gatsby-plugin-sharp": "^3.7.1",
     "gatsby-source-contentful": "^5.6.0",
     "gatsby-source-filesystem": "^3.7.1",
+    "gatsby-source-git": "^1.1.0",
     "gatsby-transformer-remark": "^4.3.0",
     "gatsby-transformer-sharp": "^3.7.1",
     "prop-types": "^15.7.2",
@@ -25,7 +27,10 @@
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "ts-node": "^10.0.0",
-    "typescript": "^4.3.2"
+    "typescript": "^4.3.2",
+    "zenn-content-css": "^0.1.87",
+    "zenn-embed-elements": "^0.1.87",
+    "zenn-markdown-html": "^0.1.87"
   },
   "devDependencies": {
     "@types/react-helmet": "^6.1.1",
@@ -38,7 +43,7 @@
   "license": "0BSD",
   "scripts": {
     "dev": "gatsby develop",
-    "build": "gatsby build",
+    "build": "git submodule update --remote && gatsby build",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
