--- a/package.json
+++ b/package.json
@@ -17,11 +17,16 @@
     "gatsby-plugin-postcss": "^4.6.0",
     "gatsby-plugin-react-helmet": "^4.4.0",
     "gatsby-plugin-sharp": "^3.7.1",
+    "gatsby-remark-katex": "^5.4.1",
+    "gatsby-remark-prismjs": "^5.6.0",
+    "gatsby-remark-vscode": "^3.3.0",
     "gatsby-source-contentful": "^5.6.0",
-    "gatsby-source-filesystem": "^3.7.1",
+    "gatsby-source-filesystem": "^3.9.0",
     "gatsby-source-git": "^1.1.0",
-    "gatsby-transformer-remark": "^4.3.0",
+    "gatsby-transformer-remark": "^4.6.0",
     "gatsby-transformer-sharp": "^3.7.1",
+    "katex": "^0.13.11",
+    "prismjs": "^1.24.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -34,6 +39,7 @@
   },
   "devDependencies": {
     "@types/react-helmet": "^6.1.1",
+    "gatsby-plugin-create-client-paths": "^3.9.0",
     "prettier": "2.2.1",
     "tailwindcss": "^2.1.2"
   },
