--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "gatsby-starter-default",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "description": "",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "wakame_tech <kamata1919@gmail.com>",
   "dependencies": {
     "@weknow/gatsby-remark-twitter": "^0.2.3",
     "autoprefixer": "^10.2.6",
@@ -18,6 +18,7 @@
     "gatsby-plugin-postcss": "^4.6.0",
     "gatsby-plugin-react-helmet": "^4.4.0",
     "gatsby-plugin-sharp": "^3.7.1",
+    "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.24",
     "gatsby-remark-katex": "^5.4.1",
     "gatsby-remark-link-card": "^1.0.3",
     "gatsby-remark-link-unfurl": "^1.0.4",
@@ -47,10 +48,7 @@
     "prettier": "2.2.1",
     "tailwindcss": "^2.1.2"
   },
-  "keywords": [
-    "gatsby"
-  ],
-  "license": "0BSD",
+  "license": "MIT",
   "scripts": {
     "dev": "gatsby develop",
     "build": "git submodule update --remote && gatsby build",
@@ -59,12 +57,5 @@
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
-  },
-  "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
   }
 }
