--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gatsby-plugin-react-helmet": "^4.4.0",
     "gatsby-plugin-sharp": "^3.7.1",
     "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.24",
+    "gatsby-remark-blog-card": "^1.0.1",
     "gatsby-remark-katex": "^5.4.1",
     "gatsby-remark-link-card": "^1.0.3",
     "gatsby-remark-link-unfurl": "^1.0.4",
