--- a/package.json
+++ b/package.json
@@ -6,55 +6,45 @@
   "author": "wakame_tech <kamata1919@gmail.com>",
   "dependencies": {
     "@weknow/gatsby-remark-twitter": "^0.2.3",
-    "autoprefixer": "^10.2.6",
+    "autoprefixer": "^10.4.2",
     "bibtex": "^0.9.0",
-    "dotenv": "^10.0.0",
-    "gatsby": "^3.4.1",
-    "gatsby-plugin-gatsby-cloud": "^2.4.1",
-    "gatsby-plugin-google-analytics": "^3.7.1",
-    "gatsby-plugin-graphql-codegen": "^2.7.1",
-    "gatsby-plugin-image": "^1.7.1",
-    "gatsby-plugin-manifest": "^3.4.0",
-    "gatsby-plugin-offline": "^4.4.0",
-    "gatsby-plugin-postcss": "^4.6.0",
-    "gatsby-plugin-react-helmet": "^4.4.0",
-    "gatsby-plugin-sharp": "^3.7.1",
-    "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.24",
-    "gatsby-remark-bibliography": "ptigas/gatsby-remark-bibliography",
-    "gatsby-remark-blog-card": "^1.0.1",
-    "gatsby-remark-katex": "^5.4.1",
-    "gatsby-remark-link-card": "^1.0.3",
-    "gatsby-remark-link-unfurl": "^1.0.4",
-    "gatsby-remark-obsidian": "^0.5.0",
-    "gatsby-remark-prismjs": "^5.6.0",
+    "dotenv": "^14.2.0",
+    "gatsby": "^4.5.4",
+    "gatsby-plugin-gatsby-cloud": "^4.5.2",
+    "gatsby-plugin-google-analytics": "^4.5.0",
+    "gatsby-plugin-graphql-codegen": "^3.1.0",
+    "gatsby-plugin-image": "^2.5.2",
+    "gatsby-plugin-manifest": "^4.5.2",
+    "gatsby-plugin-offline": "^5.5.2",
+    "gatsby-plugin-postcss": "^5.5.0",
+    "gatsby-plugin-react-helmet": "^5.5.0",
+    "gatsby-plugin-sharp": "^4.5.2",
+    "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.26",
+    "gatsby-remark-katex": "^6.5.0",
+    "gatsby-remark-prismjs": "^6.5.0",
     "gatsby-remark-prismjs-title": "^1.0.0",
-    "gatsby-remark-vscode": "^3.3.0",
-    "gatsby-source-contentful": "^5.6.0",
-    "gatsby-source-filesystem": "^3.9.0",
+    "gatsby-source-contentful": "^7.3.2",
+    "gatsby-source-filesystem": "^4.5.2",
     "gatsby-source-git": "^1.1.0",
-    "gatsby-transformer-remark": "^4.6.0",
-    "gatsby-transformer-sharp": "^3.7.1",
-    "katex": "^0.13.11",
-    "prismjs": "^1.24.1",
-    "prop-types": "^15.7.2",
+    "gatsby-transformer-remark": "^5.5.2",
+    "gatsby-transformer-sharp": "^4.5.0",
+    "katex": "^0.15.2",
+    "prismjs": "^1.26.0",
+    "prop-types": "^15.8.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0",
-    "ts-node": "^10.0.0",
-    "typescript": "^4.3.2",
-    "zenn-content-css": "^0.1.87",
-    "zenn-embed-elements": "^0.1.87",
-    "zenn-markdown-html": "^0.1.87"
+    "react-helmet": "^6.1.0"
   },
   "devDependencies": {
-    "@types/react-helmet": "^6.1.1",
-    "@typescript-eslint/eslint-plugin": "^4.32.0",
-    "@typescript-eslint/parser": "^4.32.0",
-    "eslint": "^7.32.0",
+    "@types/react-helmet": "^6.1.5",
+    "@typescript-eslint/eslint-plugin": "^5.10.0",
+    "@typescript-eslint/parser": "^5.10.0",
+    "eslint": "^8.7.0",
     "eslint-config-prettier": "^8.3.0",
-    "gatsby-plugin-create-client-paths": "^3.9.0",
-    "prettier": "^2.4.1",
-    "tailwindcss": "^2.1.2"
+    "gatsby-plugin-create-client-paths": "^4.5.0",
+    "prettier": "^2.5.1",
+    "tailwindcss": "^3.0.15",
+    "typescript": "^4.5.5"
   },
   "license": "MIT",
   "scripts": {
