--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "version": "0.1.0",
   "author": "wakame_tech <kamata1919@gmail.com>",
   "dependencies": {
-    "@weknow/gatsby-remark-twitter": "^0.2.3",
     "autoprefixer": "^10.4.2",
     "bibtex": "^0.9.0",
     "dotenv": "^14.2.0",
@@ -19,6 +18,7 @@
     "gatsby-plugin-postcss": "^5.5.0",
     "gatsby-plugin-react-helmet": "^5.5.0",
     "gatsby-plugin-sharp": "^4.5.2",
+    "gatsby-plugin-twitter": "^4.5.0",
     "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.26",
     "gatsby-remark-katex": "^6.5.0",
     "gatsby-remark-prismjs": "^6.5.0",
