--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gatsby-plugin-twitter": "^4.5.0",
     "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.26",
     "gatsby-remark-katex": "^6.5.0",
+    "gatsby-remark-obsidian": "^0.5.0",
     "gatsby-remark-prismjs": "^6.5.0",
     "gatsby-remark-prismjs-title": "^1.0.0",
     "gatsby-source-contentful": "^7.3.2",
@@ -42,6 +43,7 @@
     "eslint": "^8.7.0",
     "eslint-config-prettier": "^8.3.0",
     "gatsby-plugin-create-client-paths": "^4.5.0",
+    "netlify-cli": "^8.15.3",
     "prettier": "^2.5.1",
     "tailwindcss": "^3.0.15",
     "typescript": "^4.5.5"
@@ -51,9 +53,6 @@
     "dev": "gatsby develop",
     "build": "git submodule update --remote && gatsby build",
     "prettier:fix": "prettier --write ./src/",
-    "start": "npm run develop",
-    "serve": "gatsby serve",
-    "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "deploy": "netlify deploy --prod"
   }
 }
