--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "version": "0.1.0",
   "author": "wakame_tech <kamata1919@gmail.com>",
   "dependencies": {
+    "@mdx-js/mdx": "v1",
+    "@mdx-js/react": "v1",
     "autoprefixer": "^10.4.2",
     "bibtex": "^0.9.0",
     "dotenv": "^14.2.0",
@@ -14,20 +16,23 @@
     "gatsby-plugin-graphql-codegen": "^3.1.0",
     "gatsby-plugin-image": "^2.5.2",
     "gatsby-plugin-manifest": "^4.5.2",
+    "gatsby-plugin-mdx": "^3.6.0",
     "gatsby-plugin-offline": "^5.5.2",
+    "gatsby-plugin-page-creator": "^4.6.0",
     "gatsby-plugin-postcss": "^5.5.0",
     "gatsby-plugin-react-helmet": "^5.5.0",
     "gatsby-plugin-sharp": "^4.5.2",
     "gatsby-plugin-twitter": "^4.5.0",
     "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.26",
+    "gatsby-remark-double-brackets-link": "^0.1.11",
     "gatsby-remark-katex": "^6.5.0",
     "gatsby-remark-obsidian": "^0.5.0",
     "gatsby-remark-prismjs": "^6.5.0",
     "gatsby-remark-prismjs-title": "^1.0.0",
+    "gatsby-remark-wiki-link": "^0.3.1",
     "gatsby-source-contentful": "^7.3.2",
     "gatsby-source-filesystem": "^4.5.2",
     "gatsby-source-git": "^1.1.0",
-    "gatsby-transformer-remark": "^5.5.2",
     "gatsby-transformer-sharp": "^4.5.0",
     "katex": "^0.15.2",
     "prismjs": "^1.26.0",
