--- a/package.json
+++ b/package.json
@@ -8,55 +8,54 @@
     "@mdx-js/mdx": "v1",
     "@mdx-js/react": "v1",
     "autoprefixer": "^10.4.2",
-    "bibtex": "^0.9.0",
     "dotenv": "^14.2.0",
     "gatsby": "^4.5.4",
-    "gatsby-plugin-gatsby-cloud": "^4.5.2",
     "gatsby-plugin-google-analytics": "^4.5.0",
     "gatsby-plugin-graphql-codegen": "^3.1.0",
     "gatsby-plugin-image": "^2.5.2",
     "gatsby-plugin-manifest": "^4.5.2",
     "gatsby-plugin-mdx": "^3.6.0",
-    "gatsby-plugin-offline": "^5.5.2",
-    "gatsby-plugin-page-creator": "^4.6.0",
-    "gatsby-plugin-postcss": "^5.5.0",
     "gatsby-plugin-react-helmet": "^5.5.0",
-    "gatsby-plugin-sharp": "^4.5.2",
+    "gatsby-plugin-sharp": "^4.6.0",
     "gatsby-plugin-twitter": "^4.5.0",
-    "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.26",
+    "gatsby-plugin-windicss": "^0.1.0",
     "gatsby-remark-double-brackets-link": "^0.1.11",
+    "gatsby-remark-images": "^6.6.0",
     "gatsby-remark-katex": "^6.5.0",
     "gatsby-remark-obsidian": "^0.5.0",
     "gatsby-remark-prismjs": "^6.5.0",
     "gatsby-remark-prismjs-title": "^1.0.0",
-    "gatsby-remark-wiki-link": "^0.3.1",
-    "gatsby-source-contentful": "^7.3.2",
-    "gatsby-source-filesystem": "^4.5.2",
-    "gatsby-source-git": "^1.1.0",
+    "gatsby-source-filesystem": "^4.6.0",
+    "gatsby-transformer-markdown-references": "^0.1.8",
     "gatsby-transformer-sharp": "^4.5.0",
     "katex": "^0.15.2",
+    "prism-themes": "^1.9.0",
     "prismjs": "^1.26.0",
     "prop-types": "^15.8.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "rehype-katex": "^6.0.2",
+    "remark-math": "3.0.1",
+    "windicss": "^3.4.3"
   },
   "devDependencies": {
     "@types/react-helmet": "^6.1.5",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
+    "esbuild": "^0.14.19",
+    "esbuild-register": "^3.3.2",
     "eslint": "^8.7.0",
     "eslint-config-prettier": "^8.3.0",
     "gatsby-plugin-create-client-paths": "^4.5.0",
     "netlify-cli": "^8.15.3",
     "prettier": "^2.5.1",
-    "tailwindcss": "^3.0.15",
     "typescript": "^4.5.5"
   },
   "license": "MIT",
   "scripts": {
     "dev": "gatsby develop",
-    "build": "git submodule update --remote && gatsby build",
+    "build": "gatsby build",
     "prettier:fix": "prettier --write ./src/",
     "deploy": "netlify deploy --prod"
   }
