--- a/package.json
+++ b/package.json
@@ -57,6 +57,6 @@
     "dev": "gatsby develop",
     "build": "gatsby build",
     "prettier:fix": "prettier --write ./src/",
-    "deploy": "netlify deploy --prod"
+    "deploy": "yarn build && netlify deploy --prod"
   }
 }
