--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,6 +29,7 @@
   ],
   "rules": {
     "react/prop-types": "off",
-    "@typescript-eslint/explicit-module-boundary-types": "off"
+    "@typescript-eslint/explicit-module-boundary-types": "off",
+    "@typescript-eslint/no-non-null-assertion": "off"
   }
 }
