--- a/plugins/gatsby-remark-hashtag/package.json
+++ b/plugins/gatsby-remark-hashtag/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "mdast-util-to-string": "^3.1.0",
-    "remark": "^14.0.2",
-    "unist-util-visit": "^4.1.0"
+    "mdast-util-to-string": "3.1.0",
+    "remark": "14.0.2",
+    "unist-util-visit": "4.1.0"
   }
 }
